--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         これはサンプルページの1段落目です。これはサンプルページの1段落目です。これはサンプルページの1段落目です。これはサンプルページの1段落目です。これはサンプルページの1段落目です。これはサンプルページの1段落目です。
       </p> 
       <p class="secondbox">
-        これはサンプルページの2段落目です。これはサンプルページの2段落目です。これはサンプルページの2段落目です。これはサンプルページの2段落目です。これはサンプルページの2段落目です。これはサンプルページの2段落目です。
+        hogeこれはサンプルページの2段落目です。これはサンプルページの2段落目です。これはサンプルページの2段落目です。これはサンプルページの2段落目です。これはサンプルページの2段落目です。これはサンプルページの2段落目です。
       </p> 
     </div>
   </body>
